--- a/features/support/fixtures/drug_types_drugs.yml
+++ b/features/support/fixtures/drug_types_drugs.yml
@@ -1,22 +1,22 @@
-cefuroxime:
+cefuroxime_antibiotic:
   drug_id: 452
   drug_type_id: 1
   created_at: 2016-06-01 17:43:13.0
   updated_at: 2016-06-01 17:43:13.0
 
-cefotaxime:
+cefotaxime_peritonitis:
   drug_id: 442
   drug_type_id: 4
   created_at: 2016-06-01 17:43:13.0
   updated_at: 2016-06-01 17:43:13.0
 
-ciprofloxacin:
+ciprofloxacin_antibiotic:
   drug_id: 525
   drug_type_id: 1
   created_at: 2016-06-01 17:43:13.0
   updated_at: 2016-06-01 17:43:13.0
 
-ciprofloxacin:
+ciprofloxacin_peritonitis:
   drug_id: 525
   drug_type_id: 4
   created_at: 2016-06-01 17:43:13.0
